# dumb-oidc-server

./: .tool-versions  Makefile  README.md  skaffold.yaml
oidc_server/: Makefile  README.md  pyproject.toml
oidc_server/src/: main.py
oidc_server/src/oidc_server/: oidc_server.py
tools/kubernetes/: dumb_oidc_server.yaml
tools/mk/: common.mk  kubernetes.mk  python.mk
tools/shell/: install_required_tools.sh
