[tool.poetry]
name = "oidc-server"
version = "0.1.0"
description = "An OIDc server implementation"
authors = ["Tahar JEGHAM <tahar.jegham.gaming@gmail.com>"]
readme = "README.md"
packages = [{include = "oidc_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^1.1.2"
oic = "^1.2.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120